--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap");
+
+* {
+  font-family: "Quicksand", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: var(--background-color);
+  color: var(--complimentary-text-color);
+}
+
+:root {
+  --overlay-color: rgba(0, 0, 0, 0.7);
+  --primary-color: rgb(104, 255, 98);
+  --light-primary-color: #ffd35a;
+  --dark-primary-color: #cca027;
+  --grey-color: #aaaaaa;
+  --background-color: #1f1d2b;
+  --dark-background-color: #1a1922;
+  --transparent-color: rgba(0, 0, 0, 0.1);
+}
+.section {
+  margin: 2rem auto;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.section__heading {
+  text-align: center;
+  color: var(--primary-color);
+  font-size: 2rem;
+}
+
+@media screen and (max-width: 650px) {
+  .section {
+    width: 100%;
+  }
 }
